<resources>
    <string name="app_name">assign2</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="search_for_any_recipe_you_want">Search for any recipe you want!</string>
    <string name="recipe_name">Recipe name</string>
    <string name="search">search</string>
    <string name="save_recipe">save recipe</string>
    <string name="recipe_nutritions">recipe nutritions</string>
    <string name="Clear">Clear recipe</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in1">Sign In</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="rememeber_me">Rememeber me</string>
    <string name="recipe_nutrients">Recipe Nutrients:</string>
    <string name="search1">search</string>
</resources>