<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4B3BF"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="48dp"
            android:src="@drawable/andi"
            tools:srcCompat="@drawable/andi"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="15dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />



    </LinearLayout>




    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/search_for_any_recipe_you_want"
        android:textColor="#5B8C2A"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/rec_txt"
            android:layout_width="263dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/ser_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5B8C2A"
            android:text="@string/search1" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/txtBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="recipe"
            android:background="@drawable/border_background"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            tools:ignore="LabelFor" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">


        <Button

            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#5B8C2A"
            android:text="@string/recipe_nutritions"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#5B8C2A"
            android:text="@string/Clear"/>


    </LinearLayout>


</LinearLayout>