<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4B3BF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_txt" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwd_txt"
        app:layout_constraintStart_toStartOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <EditText
        android:id="@+id/passwd_txt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/con_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwd"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/con_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/con_pass_txt"
        app:layout_constraintStart_toStartOf="@+id/passwd_txt"
        app:layout_constraintTop_toBottomOf="@+id/passwd_txt" />

    <EditText
        android:id="@+id/con_pass_txt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_pass"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#F2622E"
        android:text="@string/sign_up1"
        app:layout_constraintBottom_toTopOf="@+id/txt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_pass_txt" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt5"
        app:layout_constraintEnd_toStartOf="@+id/txt5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="67dp"
        android:clickable="true"
        android:fontFamily="sans-serif-medium"
        android:onClick="onTextViewClick"
        android:text="@string/sign_in"
        android:textColor="#F2622E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>