<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4B3BF"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/User_name1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1" />

    <TextView
        android:id="@+id/User_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/username1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt1"
        app:layout_constraintStart_toStartOf="@+id/txt1"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_txt" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/pass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_name1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/password1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pass_txt1"
        app:layout_constraintStart_toStartOf="@+id/txt1"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <EditText
        android:id="@+id/pass_txt1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/rememeber_me"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn1"
        app:layout_constraintEnd_toEndOf="@+id/pass_txt1"
        app:layout_constraintTop_toBottomOf="@+id/pass_txt1" />

    <Button
        android:id="@+id/loginBtn1"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#F2622E"
        android:text="Sign In"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/ask1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif-medium"
        android:text="Don't have an account? "
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtSign"
        app:layout_constraintEnd_toStartOf="@+id/txtSign"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSign"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="58dp"
        android:clickable="true"
        android:text="Sign Up"
        android:textColor="#F2622E"
        android:textColorHint="#F2622E"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ask1"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn1" />

</androidx.constraintlayout.widget.ConstraintLayout>